--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
     background-color: #fefefe;
     margin: auto;
     padding: 0;
-    width: 80%;
+    width: 500px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
