--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@ body {
     text-align: center;
 }
 
+/* 
+https://www.w3schools.com/howto/howto_css_modals.asp - Thanks to this tutorial from w3schools
+*/
 /* The Modal (background) */
 .modal {
     text-align: left;
